--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ a {
 .eng-tepa-qism {
     display: flex;
     justify-content: space-between;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
 }
 .eng-tepa-qism ul {
     display: flex;
