--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,7 @@ a {
     margin-top: 50px;
     padding-top: 50px;
     text-align: center;
+    color: #fff;
 }
 .tepadan-6 h2 {
     margin-bottom: 20px;
