--- a/css/responsive.css
+++ b/css/responsive.css
@@ -175,6 +175,9 @@
         margin-top: 50px;
         margin-left: 90px;
     }
+    .about-qism-5 {
+        padding-bottom: 40px;
+    }    
     .tepadan-3-2 {
         margin-bottom: 20px;
     }
