--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,14 @@ a {
     color: #fff!important;
     background: #00BAFC;
     border-radius: 5px;
+    border: 2px solid #fff;
     padding: 10px 20px;
-    transition: color, background 0.5s ease-in;
+    transition: color, border, background-color 0.3s ease-in;
 }
 .tepa-link:hover {
     color: #000!important;
-    background: #ffff99;
+    border: 2px solid #00BAFC;
+    background-color: #fff;
     border-radius: 5px;
     padding: 10px 20px;
 }
@@ -98,10 +100,11 @@ a {
     margin-left: 0px;
 }
 .tepadan-2-3 li {
+    box-shadow: 0px 8px 8px 0px #000000 10%;
     margin: 50px 40px 50px 1px;
     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    width: 250px;
+    width: 300px;
 }
 .tepadan-2-3 h4 {
     margin: 20px 0px;
@@ -146,7 +149,9 @@ a {
 .left p {
     margin-top: 10px;
 }
-
+.left h4 {
+    font-size: 23px;
+}
 .tepadan-3 p {
     width: 450px;
     margin-right: 50px;
@@ -156,6 +161,7 @@ a {
     margin-left: 50px;
 }
 .right h4 {
+    font-size: 23px;
     margin-left: 50px;
 }
 .tepadan-3-link {
@@ -213,6 +219,7 @@ form select {
     margin-bottom: 20px;
 }
 form button {
+    border: 1px solid #fff;
     width: 200px;
     padding: 10px 25px;
     background: #00BAFC;
